# demo-fastapi

./: .gitignore  AGENTS.md  README.md  pyproject.toml
skills/python-web-builder/: SKILL.md
skills/python-web-builder/references/: api_example.md  api_rules.md  application_example.md  application_rules.md  client_example.md  client_rules.md  config_example.md  config_rules.md  design-template.md  model_example.md  model_rules.md  project_rules.md  readme-template.md  requirements-template.md  service_example.md  service_rules.md  test_example.md  test_rules.md  util_example.md  util_rules.md
src/: run_application.py
src/demo_project/: application.py
src/demo_project/api/: demo_api.py  test_api.py
src/demo_project/client/: demo_sql_client.py  test_sql_client.py
src/demo_project/config/: config.py  config_dev.py  config_prod.py
src/demo_project/model/: api_response.py  demo_dto.py  demo_sql_entity.py  demo_vo.py  test_dto.py  test_sql_entity.py  test_vo.py
src/demo_project/service/: demo_service.py  test_service.py
src/demo_project/util/: entity_util.py
test/: run_test.py
test/demo_project_test/: application_test.py
